Release 2.40.2

Copyright (c) 1998-2010 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.40.2 - July ??, 2010

    Corrected a bug in the runtime error handler that would result in entity
    existence error being reported as (internal) predicate existence errors.

    Corrected a bug where the protocols implemented by the built-in object
    "logtalk" would not be returned by the implements_protocol/2-3 built-in
    predicates.

    Updated the CxProlog config file to require version 0.97.5 or later. This
    version adds the epsilon/0 arithmetic constant that is used in the library
    unit test support.

    Updated the SWI-Prolog and YAP config files in order to support the
    expects_dialect/1 proprietary directive.

    Removed the definitions of the no longer necessary '$lgt_keysort'/2 and
    '$lgt_sort'/2 internal predicates from the supported config files.

    Added an experimental example of coinduction when using SWI-Prolog as
    the back-end Prolog compiler by leveraging this compiler "coinduction"
    library (requires SWI-Prolog 5.10.1 or a later version).

    Updated the "constraints/swipl/loader.lgt" helper file to avoid the errors
    generated when loading the CLP(FD) library with the SWI-Prolog "iso" flag
    set to "true".

    Updated the "dcgs" example unit tests to avoid a compilation error when
    using SWI-Prolog 5.11.3 and later versions due to changes in this compiler
    parser for stricter ISO Prolog syntax.


2.40.1 - June 30, 2010

    Restored support for GNU Prolog. Requires GNU Prolog version 1.4.0 (or
    later), which provides support for the ISO Prolog predicate directive
    multifile/1.
