@@ -15,6 +15,12 @@ RELEASE NOTES
 
 2.40.2 - July ??, 2010
 
+    Added a new Logtalk built-in predicate, logtalk_load_context/2, similar
+    to the prolog_load_context/2 built-in predicate found in several Prolog
+    compilers, in order to provide access to the compilation/loading context.
+    The initial set of supported context keys is {entity_name, entity_prefix,
+    entity_type, file, directory}.
+
     Corrected a bug in the runtime error handler that would result in entity
     existence error being reported as (internal) predicate existence errors.
 
